# flappy

./: .gitignore  CMakeLists.txt  CMakePresets.json  License.txt  Notes.txt  Readme.md  app.manifest  credits.txt  doge.pal  doge.raw  engine.cpp  engine.hpp  game.cpp  game.hpp  main.cpp  main.hpp  mingw-w64.toolchain  resource.rc  util.cpp  util.hpp  wine.sh
assetPack/: CMakeLists.txt  assetPack.cpp
convertPng/: CMakeLists.txt  convertPng.cpp
ddraw/: engine.hpp  main.cpp
engine/: CMakeLists.txt
engine/zorro/: BufferView.cpp  BufferView.hpp  CMakeLists.txt  IEngine.hpp  IGame.hpp  rng.hpp  stb.c  util.cpp  util.hpp
engine/zorro/ddraw/: bitmap.cpp  engine.cpp  engine.hpp  main.cpp  palette.cpp  sfx.cpp
sdl/: engine.cpp  engine.hpp
testDdraw/: CMakeLists.txt  Notes.txt  blit.hpp  fixed16.hpp  main.cpp  test1.cpp  test2.cpp  test3.cpp  util.cpp  util.hpp
